<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">小拓公交</string>
    <string name="main_title">产品编号:0123456789</string>
    <string name="main_Circuit">公交线路:888路</string>















    <string name="app_title">WPOS SDK Demo V</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_keyex">keyex</string>
    <string name="picccard">PICC Card</string>
    <string name="icacard">IC Card</string>
    <string name="magcard">Mag Card</string>
    <string name="psam1">psam1</string>
    <string name="psam2">psam2</string>
    <string name="at24">AT24CXX</string>
    <string name="card4428">4428</string>
    <string name="card4442">4442</string>
    <string name="ditips">Swipe your card after beep</string>
    <string name="exit">EXIT</string>
    <string name="carddete">Card Exist detection</string>
    <string name="iddete">ID card</string>
    <string name="closecard">Close card reader</string>
    <string name="index_sys">System</string>
    <string name="read_operation">Card</string>
    <string name="key_operation">Key</string>
    <string name="pin_operation">Pin</string>
    <string name="index_readcardold">card reader (read_wait)</string>
    <string name="index_readcard">card reader (read_cycle)</string>
    <string name="index_ex">Import key</string>
    <string name="index_dukpt">DUKPT</string>
    <string name="index_checkkeyexist">check key exist</string>
    <string name="get_keykcv">get key KCV</string>
    <string name="index_keyboard">PIN Pad</string>
    <string name="index_en">en_decryption</string>
    <string name="index_mac">Get MAC</string>
    <string name="index_random">Get random number</string>
    <string name="index_eraser">Erase All keys</string>
    <string name="index_print">Printer</string>
    <string name="index_btprint">BlueTooth_Printer</string>
    <string name="index_idcard">China Identity card</string>
    <string name="index_sp">update sp</string>
    <string name="index_dock">DOCK</string>
    <string name="index_emv">EMV</string>
    <string name="btn_read_non_contact_title">Read PICC Card Information</string>
    <string name="print_press">Stress test</string>
    <string name="priman_con">printer control</string>
    <string name="btpriman_con">BlueToothPrinter control</string>
    <string name="priman_status">get printer status</string>
    <string name="priman_kilometres">get printer kilometres</string>
    <string name="clear_kilometres">clear printer kilometres</string>
    <string name="confirm">OK</string>
    <string name="clear">clear</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="dock_update_tips">Update steps: \n1 Prepare the update bin.\n2 Rename the file name as DOCKupdatefile.\n3 Put DOCKupdatefile to device /data/ folder.\n4 Press update button.\n5 Waiting for update finish.\n6 Reset DOCK, confirm dock version to check the result.</string>
    <string name="dock_test">test</string>
    <string name="docktest_tip">Test steps: \n1 Prepare 2 jpg file with resolution 800x600 and less than 1MB.\n2 Rename these 2 file as WangposTestImage_1.jpg and WangposTestImage_2.jpg.\n3 Put these file to device at /data/ folder.</string>
    <string name="read_non_context_success">Read Non-Contact Information Successful！\nLength：<xliff:g id="length">%1$d</xliff:g>\nData：<xliff:g id="length">%2$s</xliff:g></string>
    <string name="get_service_version">Get Service Version</string>
    <string name="get_date_time">Get Time</string>
    <string name="set_date_time">Set Time</string>
    <string name="read_sn">Read SN</string>
    <string name="read_sp_sn">Read SP SN</string>
    <string name="write_sp_sn">Write SP SN</string>
    <string name="get_battery_level">Get Battery Level</string>
    <string name="get_temper">Get Temper</string>
    <string name="enable_temper">Enable Temper</string>
    <string name="get_devices_version">Get Devices Version</string>
    <!--Get Devices Code-->
    <string name="get_sp_version">Get SP Version</string>
    <string name="get_firmware_version">Get Firmware version</string>
    <string name="get_gm_status">Get GM Status</string>
    <string name="break_off_command">Break Off Command</string>
    <string name="buzzer">Buzzer</string>
    <string name="led">Led</string>
    <string name="stop_card_reader">Stop card reader</string>
    <string name="test_please">Please click button</string>
    <string name="test_result">Test result</string>
    <string name="execute_success">Successful!</string>
    <string name="execute_fail">Failed!</string>
    <string name="get_sp_id">Get SP_ID</string>
    <string name="note_key">Note: import the Key before using this feature</string>
    <string name="emv_aid_capk">set Aid_Capk</string>
    <string name="emv_trans">Transaction</string>
    <string name="click_and_try">Retry</string>
    <string name="desFire">DesFire</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="_123465_id_123654987_20181206">车辆号:123465\n设备ID:123654987\n版本:20181206</string>
</resources>
