<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:orientation="vertical"
    >
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textviewsys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:text="@string/test_result"/>
                <Button
                    android:id="@+id/getdatatime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_date_time"
                    android:textSize="20dp"
                    />
                <Button
                    android:id="@+id/setdatatime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_date_time"
                    android:textSize="20dp"
                    />
                <Button
                    android:id="@+id/readsn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_sn"
                    android:textSize="20dp"
                   />
                <Button
                    android:id="@+id/readspsn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/read_sp_sn"
                    android:textSize="20dp"
                    />
                <Button
                    android:id="@+id/writespsn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/write_sp_sn"
                    android:visibility="gone"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/getbatlev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_battery_level"
                    android:visibility="gone"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/gettemper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/get_temper"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/enabtem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/enable_temper"
                    android:textSize="20sp"
                   />
                <Button
                    android:id="@+id/getserviceV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_service_version"
                    android:textSize="20dp"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/getdevver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_devices_version"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/getspver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_sp_version"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/getfirver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_firmware_version"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/getgmssta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_gm_status"
                    android:visibility="gone"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/breakoff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/break_off_command"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/buzzer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buzzer"
                    android:textSize="20sp"
                    />
                <Button
                    android:id="@+id/led"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/led"
                    android:textSize="20sp"
                    />
            <Button
                android:id="@+id/kernel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="kernel"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/get_sp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_sp_id"
                android:textSize="20sp"
                />
        </LinearLayout>
    </ScrollView>
        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/exit"
            android:textSize="20sp"
            android:layout_weight="1"
            />
</LinearLayout>