<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/card"
                android:text="@string/picccard"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/iccard"
                android:text="@string/icacard"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/mag"
                android:text="@string/magcard"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/buttonpsm1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psam1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/buttonpsm2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psam2"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/buttonM0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="M0"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/buttonM1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="M1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/atx24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at24"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/button4428"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card4428"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/button4442"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card4442"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/buttonDesFire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desFire"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/cardtextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/test_please"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btn_stop"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_card_reader"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/exit"
                android:text="@string/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"/>
        </LinearLayout>

</ScrollView>