<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/card"
            android:text="@string/picccard"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/iccard"
            android:text="@string/icacard"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/mag"
            android:text="@string/magcard"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/button_read_non_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_read_non_contact_title"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="20sp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonFelica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Felica"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/cardtextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/test_please"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_card_reader"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:text="@string/exit"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>