<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btnpmcontrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priman_con"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnpmstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priman_status"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnpmkilometres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priman_kilometres"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/kilometres_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_kilometres"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tvshowprinttips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"/>

</LinearLayout>
    <Button
        android:id="@+id/btnpmexit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="exit"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"/>
</RelativeLayout>