<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/dock_testn"
            android:text="@string/dock_test"
            android:layout_width="match_parent"
            android:layout_height="100px" />
        <TextView
            android:id="@+id/dock_test_tip"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docktest_tip"/>
    </LinearLayout>
    <Button
        android:id="@+id/docktestexit"
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="100px" />
</RelativeLayout>